--- a/UI/adminhome.html
+++ b/UI/adminhome.html
@@ -5,15 +5,16 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
+        <script src="js/storemanager.js"></script>
     </head>
     <body>
        <nav>
-           <div style="float:left; width: 20%">
-                <img src="img/logo-header.png" width="100%" height="48px" style="padding-left:20px">
+           <div id="logo">
+                <img src="img/logo-header.png" width="100%" height="48px" id="logoimg">
            </div>
-           <div style="float:left; width:20%; padding-left:100px; text-align: center ">
-                <h1>Store Manager</h1>
+           <div id="adminheaderheading">
+                <h1>Admin Manager</h1>
            </div>
            <ul>
                <li><a href="adminhome.html" class="active">Products</a></li>
@@ -22,54 +23,69 @@
                <li><a href="addattendant.html">Add Attendant</a></li>
                <li><a href="adminaddproduct.html">Add Product</a></li>
                <li><a href="#">Settings</a></li>
-               <li style="float:right; padding-right:5px"><img src="img/empty-profile.png" width="50px" height="40px" style="border-radius:5%"></li>
+               <li id="profilepic"><img src="img/empty-profile.png" width="50px" height="40px"></li>
            </ul>
        </nav> 
        <!-- class="borders" -->
-       <section style="width:100%; height:5vh; margin-top:60px; padding-top: 5px">
-            <div style="float:right; width:5%;">
-                    <a href="login.html"><button class="btn btn-s" style="background-color:red">Log Out</button></a>
+       <section class="secondheader">
+            <div class="logout">
+                    <a href="login.html"><button class="btn btn-s red">Log Out</button></a>
             </div>
-            <div style="float:right; width:5%; margin-left:20px" >
+            <div class="cart">
                     <img src="img/cart.jpeg" width="20px" height="20px">
             </div>   
-            <div style="float:right; width:20%;">
-                <input type="text" placeholder="search" style="width:100%">
+            <div class="search">
+                <input type="text" placeholder="search">
             </div>
            
        </section>
-       <section style="margin-top: 10px; min-height: 100vh;" >
+       <section class="content" >
            <h2>All Products</h2>
-           <div class="borders" style="width:80%; height:30vh;">
-                <div style="float:left; width:30%"><img src="img/velvet.jpg" width="250px" height="180px"></div>
-                <div style="float:left; width:50%">
+           <div class="borders item" id="item1">
+                <div class="itemimage"><img id="itempicture" src="img/velvet.jpg" width="250px" height="180px"></div>
+                <div class="itemdetails">
                         <br>
-                    <span>Name: </span>Velvet Cake<br><br>
-                    <span>Quantity:</span>6<br><br>
-                    <span>Unit Price:</span>11,000/=<br><br>
-                    <button class="btn btn-m" style="background-color:red">Add to Cart</button>
+                    Name:<span>Velvet Cake</span><br><br>
+                    Quantity:<span>6</span><br><br>
+                    Unit Price:<span>11,000/=</span><br><br>
+                    <table>
+                        <tr>
+                            <td><a href="editproduct.html"><button class="btn btn-m red" >Edit</button></a></td>
+                            <td><button class="btn btn-small red" onclick="deleteitem1()">Delete</button></td>
+                        </tr>
+                    </table>
                 </div>
            </div>
            <br>
-           <div class="borders" style="width:80%; height:30vh;">
-                <div style="float:left; width:30%"><img src="img/creamnail.jpg" width="250px" height="180px"></div>
-                <div style="float:left; width:50%">
+           <div class="borders item" id="item2">
+                <div class="itemimage"><img src="img/creamnail.jpg" width="250px" height="180px"></div>
+                <div class="itemdetails">
                         <br>
                     <span>Name: </span>Creamware Expresso cup<br><br>
                     <span>Quantity:</span>3<br><br>
                     <span>Unit Price:</span>30,000/=<br><br>
-                    <button class="btn btn-m" style="background-color:red">Add to Cart</button>
+                    <table>
+                            <tr>
+                                <td><a href="editproduct.html"><button class="btn btn-m red" >Edit</button></a></td>
+                                <td><button class="btn btn-small red" onclick="deleteitem2()">Delete</button></td>
+                            </tr>
+                    </table>
                 </div>
            </div>
            <br>
-           <div class="borders" style="width:80%; height:30vh;">
-                <div style="float:left; width:30%"><img src="img/champion.jpg" width="250px" height="180px"></div>
-                <div style="float:left; width:50%">
+           <div class="borders item" id="item3">
+                <div class="itemimage"><img src="img/champion.jpg" width="250px" height="180px"></div>
+                <div class="itemdetails">
                         <br>
                     <span>Name: </span>Champion A4 Exercise book<br><br>
                     <span>Quantity:</span>30<br><br>
                     <span>Unit Price:</span>5,000/=<br><br>
-                    <button class="btn btn-m" style="background-color:red">Add to Cart</button>
+                    <table>
+                            <tr>
+                                <td><a href="editproduct.html"><button class="btn btn-m red" >Edit</button></a></td>
+                                <td><button class="btn btn-small red" onclick="deleteitem3()">Delete</button></td>
+                            </tr>
+                    </table>
                 </div>
            </div>
        </section>
