--- a/UI/home.html
+++ b/UI/home.html
@@ -5,69 +5,71 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
+        <script src="js/storemanager.js"></script>
     </head>
     <body>
        <nav>
-           <div style="float:left; width: 20%">
-                <img src="img/logo-header.png" width="100%" height="48px" style="padding-left:20px">
+           <div id="logo">
+                <img src="img/logo-header.png" id="logoimg" width="100%" height="48px">
            </div>
-           <div style="float:left; width:20%; padding-left:200px; text-align: center ">
+           <div id="headerheading">
                 <h1>Store Manager</h1>
            </div>
            <ul>
                <li><a href="home.html" class="active">Products</a></li>
                <li><a href="attendant_sales.html">Sales</a></li>
                <li><a href="addproduct.html">Add Product</a></li>
-               <li><a href="#">Settings</a></li>
-               <li style="float:right; padding-right:5px"><img src="img/empty-profile.png" width="50px" height="40px" style="border-radius:5%"></li>
+               <li><a href="profile.html">Profile</a></li>
+               <li id="profilepic"><img src="img/empty-profile.png" width="50px" height="40px"></li>
            </ul>
        </nav> 
        <!-- class="borders" -->
-       <section style="width:100%; height:5vh; margin-top:60px; padding-top: 5px">
-            <div style="float:right; width:5%;">
-                    <a href="login.html"><button class="btn btn-s" style="background-color:red">Log Out</button></a>
+       <section class="secondheader">
+            <div class="logout">
+                    <a href="login.html"><button class="btn btn-s red">Log Out</button></a>
             </div>
-            <div style="float:right; width:5%; margin-left:20px" >
-                    <img src="img/cart.jpeg" width="20px" height="20px">
+            <div class="cart">
+                <span id="cartnumber">0</span>
+                <img src="img/cart.jpeg" width="20px" height="20px">
             </div>   
-            <div style="float:right; width:20%;">
-                <input type="text" placeholder="search" style="width:100%">
+            <div class="search">
+                <input type="text" placeholder="search">
             </div>
            
        </section>
-       <section style="margin-top: 10px; min-height: 100vh;" >
+       <section class="content">
            <h2>All Products</h2>
-           <div class="borders" style="width:80%; height:30vh;">
-                <div style="float:left; width:30%"><img src="img/velvet.jpg" width="250px" height="180px"></div>
-                <div style="float:left; width:50%">
+           <div class="borders item">
+                <div class="itemimage"><img src="img/velvet.jpg" width="250px" height="180px"></div>
+                <div class="itemdetails">
                         <br>
                     <span>Name: </span>Velvet Cake<br><br>
-                    <span>Quantity:</span>6<br><br>
-                    <span>Unit Price:</span>11,000/=<br><br>
-                    <button class="btn btn-m" style="background-color:red">Add to Cart</button>
+                    Quantity:<span id="qty1">1</span><br><br>
+                    <span >Unit Price:</span>11,000/=<br><br>
+                    <button class="btn btn-m red" id="addbtn1" onclick="addtocart1()">Add to Cart</button>
                 </div>
            </div>
            <br>
-           <div class="borders" style="width:80%; height:30vh;">
-                <div style="float:left; width:30%"><img src="img/creamnail.jpg" width="250px" height="180px"></div>
-                <div style="float:left; width:50%">
+           <div class="borders item">
+                <div class="itemimage"><img src="img/creamnail.jpg" width="250px" height="180px"></div>
+                <div class="itemdetails">
                         <br>
                     <span>Name: </span>Creamware Expresso cup<br><br>
-                    <span>Quantity:</span>3<br><br>
+                    Quantity:<span id="qty2">3</span><br><br>
                     <span>Unit Price:</span>30,000/=<br><br>
-                    <button class="btn btn-m" style="background-color:red">Add to Cart</button>
+                    <button class="btn btn-m red" id="addbtn2" onclick="addtocart2()">Add to Cart</button>
                 </div>
            </div>
            <br>
-           <div class="borders" style="width:80%; height:30vh;">
-                <div style="float:left; width:30%"><img src="img/champion.jpg" width="250px" height="180px"></div>
-                <div style="float:left; width:50%">
+           <div class="borders item">
+                <div class="itemimage"><img src="img/champion.jpg" width="250px" height="180px"></div>
+                <div class="itemdetails">
                         <br>
                     <span>Name: </span>Champion A4 Exercise book<br><br>
-                    <span>Quantity:</span>30<br><br>
+                    Quantity:<span id="qty3">30</span><br><br>
                     <span>Unit Price:</span>5,000/=<br><br>
-                    <button class="btn btn-m" style="background-color:red">Add to Cart</button>
+                    <button class="btn btn-m red" id="addbtn3" onclick="addtocart3()">Add to Cart</button>
                 </div>
            </div>
        </section>
