--- a/UI/profile.html
+++ b/UI/profile.html
@@ -6,6 +6,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
+        <script src="js/storemanager.js"></script>
     </head>
     <body>
        <nav>
@@ -18,8 +19,8 @@
            <ul>
                <li><a href="home.html">Products</a></li>
                <li><a href="attendant_sales.html">Sales</a></li>
-               <li><a href="addproduct.html" class="active">Add Product</a></li>
-               <li><a href="profile.html">Profile</a></li>
+               <li><a href="addproduct.html">Add Product</a></li>
+               <li><a href="profile.html" class="active">Profile</a></li>
                <li id="profilepic"><img src="img/empty-profile.png" width="50px" height="40px"></li>
            </ul>
        </nav> 
@@ -31,25 +32,18 @@
        </section>
 
        <section class="content">
-        <div class="additem">
-            <h2>Add Item</h2>
-           <form>
-                <label>Name</label><br><input type="text" name="name"><br><br>
-                <label>Quantity</label><br><input type="text" name="qty"><br><br>
-                <label>Unit Price</label><br><input type="text" name="unitprice"><br><br>
-                <label>Category</label><br>
-                <select>
-                    <option></option>
-                    <option>Cutlery</option>
-                    <option>Food</option>
-                    <option>Groceries</option>
-                    <option>Toiletries</option>
-                    <option>Scholastic</option>
-                </select><br><br>
-                <button class="btn btn-lg forestgreen">Add</button>
-                <br><br>
-           </form>
-        </div>
+            <div class="row">
+                <div class="imagecol"><img src="img/empty-profile.png" width="300px" height="300px"></div>
+                <div class="contentcol">
+                    <p><b>Name: </b></p>Masembe Steven
+                    <p><b>Age: </b></p>30
+                    <p><b>Joined: </b></p>30/01/2018
+                    <p><b>To: </b></p>Sat 13 Oct 2018
+                    <p><b>Total number of sales: </b></p>60
+                    <p><b>Total number of products: </b></p>300
+                    <p><b>Total worth of products: </b></p>3,000,000
+                </div>
+            </div>
        </section>
     </body>
 </html>
